testdata/baselines/reference/submodule/conformance/TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.errors.txt
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(2,18): error TS2300: Duplicate identifier 'Point'.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(10,18): error TS2300: Duplicate identifier 'Point'.


==== TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts (2 errors) ====
    module A {
        export class Point {
                     ~~~~~
!!! error TS2300: Duplicate identifier 'Point'.
            x: number;
            y: number;
        }
    }
    
    module A{
        // expected error
        export class Point {
                     ~~~~~
!!! error TS2300: Duplicate identifier 'Point'.
            origin: number;
            angle: number;
        }
    }
    
    module X.Y.Z {
        export class Line {
            length: number;
        }
    }
    
    module X {
        export module Y {
            export module Z {
                // expected error
                export class Line {
                    name: string;
                }
            }
        }
    }
    